Package_Tools/include-C/efl/ecore-con-1/inarbeit/Ecore_Con.h


typedef struct _Ecore_Con_Url Ecore_Con_Url;
typedef enum _Ecore_Con_Url_Time
{
   ECORE_CON_URL_TIME_NONE = 0,
   ECORE_CON_URL_TIME_IFMODSINCE,
   ECORE_CON_URL_TIME_IFUNMODSINCE
} Ecore_Con_Url_Time;
typedef enum _Ecore_Con_Url_Http_Version
{
   ECORE_CON_URL_HTTP_VERSION_1_0,
   ECORE_CON_URL_HTTP_VERSION_1_1
} Ecore_Con_Url_Http_Version;
extern Eina_Bool         ecore_con_url_http_version_set(Ecore_Con_Url *url_con, Ecore_Con_Url_Http_Version version);
extern int               ecore_con_url_init(void);
extern int               ecore_con_url_shutdown(void);
extern void              ecore_con_url_pipeline_set(Eina_Bool enable);
extern Eina_Bool         ecore_con_url_pipeline_get(void);
extern Ecore_Con_Url *   ecore_con_url_new(const char *url);
extern Eina_Bool ecore_con_url_url_set(Ecore_Con_Url *url_con,
                                     const char *url);
extern const char *ecore_con_url_url_get(Ecore_Con_Url *url_con);
extern Ecore_Con_Url *   ecore_con_url_custom_new(const char *url,
                                                const char *custom_request);
extern void              ecore_con_url_free(Ecore_Con_Url *url_con);
extern void              ecore_con_url_data_set(Ecore_Con_Url *url_con,
                                              void *data);
extern void *            ecore_con_url_data_get(Ecore_Con_Url *url_con);
extern void              ecore_con_url_additional_header_add(Ecore_Con_Url *url_con,
                                                           const char *key,
                                                           const char *value);
extern void              ecore_con_url_additional_headers_clear(Ecore_Con_Url *url_con);
extern const Eina_List * ecore_con_url_response_headers_get(Ecore_Con_Url *url_con);
extern void              ecore_con_url_fd_set(Ecore_Con_Url *url_con, int fd);
extern int               ecore_con_url_received_bytes_get(Ecore_Con_Url *url_con);
extern Eina_Bool         ecore_con_url_httpauth_set(Ecore_Con_Url *url_con,
                                                  const char *username,
                                                  const char *password,
                                                  Eina_Bool safe);
extern Eina_Bool         ecore_con_url_get(Ecore_Con_Url *url_con);
extern Eina_Bool         ecore_con_url_head(Ecore_Con_Url *url_con);
extern Eina_Bool         ecore_con_url_post(Ecore_Con_Url *url_con,
                                          const void *data, long length,
                                          const char *content_type);
extern void              ecore_con_url_time(Ecore_Con_Url *url_con,
                                          Ecore_Con_Url_Time time_condition,
                                          double timestamp);
extern Eina_Bool         ecore_con_url_ftp_upload(Ecore_Con_Url *url_con,
                                                const char *filename,
                                                const char *user,
                                                const char *pass,
                                                const char *upload_dir);
extern void              ecore_con_url_verbose_set(Ecore_Con_Url *url_con,
                                                 Eina_Bool verbose);
extern void              ecore_con_url_ftp_use_epsv_set(Ecore_Con_Url *url_con,
                                                      Eina_Bool use_epsv);
extern void              ecore_con_url_cookies_init(Ecore_Con_Url *url_con);
extern void              ecore_con_url_cookies_ignore_old_session_set(Ecore_Con_Url *url_con,
                                                                    Eina_Bool ignore);
extern void              ecore_con_url_cookies_clear(Ecore_Con_Url *url_con);
extern void              ecore_con_url_cookies_session_clear(Ecore_Con_Url *url_con);
extern void              ecore_con_url_cookies_file_add(Ecore_Con_Url *url_con,
                                                      const char * const file_name);
extern Eina_Bool         ecore_con_url_cookies_jar_file_set(Ecore_Con_Url *url_con,
                                                          const char * const cookiejar_file);
extern void              ecore_con_url_cookies_jar_write(Ecore_Con_Url *url_con);
extern void              ecore_con_url_ssl_verify_peer_set(Ecore_Con_Url *url_con,
                                                         Eina_Bool verify);
extern int               ecore_con_url_ssl_ca_set(Ecore_Con_Url *url_con,
                                                const char *ca_path);
extern Eina_Bool ecore_con_url_proxy_set(Ecore_Con_Url *url_con, const char *proxy);
extern Eina_Bool ecore_con_url_proxy_username_set(Ecore_Con_Url *url_con, const char *username);
extern Eina_Bool ecore_con_url_proxy_password_set(Ecore_Con_Url *url_con, const char *password);
extern void ecore_con_url_timeout_set(Ecore_Con_Url *url_con, double timeout);
extern int ecore_con_url_status_code_get(Ecore_Con_Url *url_con);
extern void ecore_con_url_limit_upload_speed(Ecore_Con_Url *url_obj, off_t max_speed);
extern void ecore_con_url_limit_download_speed(Ecore_Con_Url *url_obj, off_t max_speed);