advancedpackages/efl/ecore-con-1/Ecore_Con.inc


function ecore_con_url_http_version_set(url_con: PEcore_Con_Url; version: TEcore_Con_Url_Http_Version): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_init: longint; cdecl; external libecore_con;
function ecore_con_url_shutdown: longint; cdecl; external libecore_con;
procedure ecore_con_url_pipeline_set(enable: TEina_Bool); cdecl; external libecore_con;
function ecore_con_url_pipeline_get: TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_new(url: pchar): PEcore_Con_Url; cdecl; external libecore_con;
function ecore_con_url_url_set(url_con: PEcore_Con_Url; url: pchar): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_url_get(url_con: PEcore_Con_Url): pchar; cdecl; external libecore_con;
function ecore_con_url_custom_new(url: pchar; custom_request: pchar): PEcore_Con_Url; cdecl; external libecore_con;
procedure ecore_con_url_free(url_con: PEcore_Con_Url); cdecl; external libecore_con;
procedure ecore_con_url_data_set(url_con: PEcore_Con_Url; data: pointer); cdecl; external libecore_con;
function ecore_con_url_data_get(url_con: PEcore_Con_Url): pointer; cdecl; external libecore_con;
procedure ecore_con_url_additional_header_add(url_con: PEcore_Con_Url; key: pchar; value: pchar); cdecl; external libecore_con;
procedure ecore_con_url_additional_headers_clear(url_con: PEcore_Con_Url); cdecl; external libecore_con;
function ecore_con_url_response_headers_get(url_con: PEcore_Con_Url): PEina_List; cdecl; external libecore_con;
procedure ecore_con_url_fd_set(url_con: PEcore_Con_Url; fd: longint); cdecl; external libecore_con;
function ecore_con_url_received_bytes_get(url_con: PEcore_Con_Url): longint; cdecl; external libecore_con;
function ecore_con_url_httpauth_set(url_con: PEcore_Con_Url; username: pchar; password: pchar; safe: TEina_Bool): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_get(url_con: PEcore_Con_Url): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_head(url_con: PEcore_Con_Url): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_post(url_con: PEcore_Con_Url; data: pointer; length: longint; content_type: pchar): TEina_Bool; cdecl; external libecore_con;
procedure ecore_con_url_time(url_con: PEcore_Con_Url; time_condition: TEcore_Con_Url_Time; timestamp: double); cdecl; external libecore_con;
function ecore_con_url_ftp_upload(url_con: PEcore_Con_Url; filename: pchar; user: pchar; pass: pchar; upload_dir: pchar): TEina_Bool; cdecl; external libecore_con;
procedure ecore_con_url_verbose_set(url_con: PEcore_Con_Url; verbose: TEina_Bool); cdecl; external libecore_con;
procedure ecore_con_url_ftp_use_epsv_set(url_con: PEcore_Con_Url; use_epsv: TEina_Bool); cdecl; external libecore_con;
procedure ecore_con_url_cookies_init(url_con: PEcore_Con_Url); cdecl; external libecore_con;
procedure ecore_con_url_cookies_ignore_old_session_set(url_con: PEcore_Con_Url; ignore: TEina_Bool); cdecl; external libecore_con;
procedure ecore_con_url_cookies_clear(url_con: PEcore_Con_Url); cdecl; external libecore_con;
procedure ecore_con_url_cookies_session_clear(url_con: PEcore_Con_Url); cdecl; external libecore_con;
procedure ecore_con_url_cookies_file_add(url_con: PEcore_Con_Url; file_name: pchar); cdecl; external libecore_con;
function ecore_con_url_cookies_jar_file_set(url_con: PEcore_Con_Url; cookiejar_file: pchar): TEina_Bool; cdecl; external libecore_con;
procedure ecore_con_url_cookies_jar_write(url_con: PEcore_Con_Url); cdecl; external libecore_con;
procedure ecore_con_url_ssl_verify_peer_set(url_con: PEcore_Con_Url; verify: TEina_Bool); cdecl; external libecore_con;
function ecore_con_url_ssl_ca_set(url_con: PEcore_Con_Url; ca_path: pchar): longint; cdecl; external libecore_con;
function ecore_con_url_proxy_set(url_con: PEcore_Con_Url; proxy: pchar): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_proxy_username_set(url_con: PEcore_Con_Url; username: pchar): TEina_Bool; cdecl; external libecore_con;
function ecore_con_url_proxy_password_set(url_con: PEcore_Con_Url; password: pchar): TEina_Bool; cdecl; external libecore_con;
procedure ecore_con_url_timeout_set(url_con: PEcore_Con_Url; timeout: double); cdecl; external libecore_con;
function ecore_con_url_status_code_get(url_con: PEcore_Con_Url): longint; cdecl; external libecore_con;
procedure ecore_con_url_limit_upload_speed(url_obj: PEcore_Con_Url; max_speed: Toff_t); cdecl; external libecore_con;
procedure ecore_con_url_limit_download_speed(url_obj: PEcore_Con_Url; max_speed: Toff_t); cdecl; external libecore_con;

// === Konventiert am: 8-6-25 17:40:37 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
